endpoints: delete reaction
